--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tree-sitter-clingo"
-version = "0.0.14-dev"
+version = "0.0.14"
 publish = true
 authors = ["Sven Thiele <sthiele78@gmail.com>"]
 description = "Clingo grammar for the tree-sitter parsing library"
@@ -25,7 +25,7 @@ include = [
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter = "~0.22.5"
+tree-sitter = "~0.22.6"
 
 [build-dependencies]
 cc = "1.0"
