--- a/package.json
+++ b/package.json
@@ -1,38 +1,50 @@
 {
-  "dependencies": {
-    "node-addon-api": "^7.1.0",
-    "node-gyp-build": "^4.8.0"
-  },
-  "peerDependencies": {
-    "tree-sitter": "^0.21.0"
-  },
-  "peerDependenciesMeta": {
-    "tree_sitter": {
-      "optional": true
-    }
-  },
   "name": "tree-sitter-clingo",
-  "version": "1.0.0",
-  "description": "tree-sitter parser for the clingo language",
+  "version": "0.1.0",
+  "description": "Clingo grammar for tree-sitter",
+  "repository": "https://github.com/potassco/tree-sitter-clingo",
+  "license": "MIT",
+  "author": {
+    "name": "Roland Kaminski"
+  },
   "main": "bindings/node",
   "types": "bindings/node",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "node-gyp-build",
-    "prebuildify": "prebuildify --napi --strip"
-  },
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "tree-sitter-cli": "^0.20.0",
-    "prebuildify": "^6.0.0"
-  },
+  "keywords": [
+    "incremental",
+    "parsing",
+    "tree-sitter",
+    "clingo"
+  ],
   "files": [
     "grammar.js",
+    "tree-sitter.json",
     "binding.gyp",
     "prebuilds/**",
     "bindings/node/*",
     "queries/*",
-    "src/**"
-  ]
+    "src/**",
+    "*.wasm"
+  ],
+  "dependencies": {
+    "node-addon-api": "^8.3.1",
+    "node-gyp-build": "^4.8.4"
+  },
+  "devDependencies": {
+    "prebuildify": "^6.0.1",
+    "tree-sitter-cli": "^0.25.8"
+  },
+  "peerDependencies": {
+    "tree-sitter": "^0.22.4"
+  },
+  "peerDependenciesMeta": {
+    "tree-sitter": {
+      "optional": true
+    }
+  },
+  "scripts": {
+    "install": "node-gyp-build",
+    "prestart": "tree-sitter build --wasm",
+    "start": "tree-sitter playground",
+    "test": "node --test bindings/node/*_test.js"
+  }
 }
