--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "prebuildify": "^6.0.1",
-    "tree-sitter-cli": "^0.26.0"
+    "tree-sitter-cli": ">=0.25.0 <0.27.0"
   },
   "peerDependencies": {
     "tree-sitter": "^0.22.4"
