--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,14 +16,14 @@ jobs:
   #   with:
   #     generate: true
   #     attestations: true
-  npm:
-    uses: tree-sitter/workflows/.github/workflows/package-npm.yml@main
-    secrets:
-      NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
-  # crates:
-  #   uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
+  # npm:
+  #   uses: tree-sitter/workflows/.github/workflows/package-npm.yml@main
   #   secrets:
-  #     CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
+  #     NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+  crates:
+    uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
+    secrets:
+      CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
   # pypi:
   #   uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
   #   secrets:
