generate tree-sitter grammar during build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ include = [
   "bindings/rust/*",
   "grammar.js",
   "queries/*",
-  "src/*",
+  "src/scanner.c",
   "tree-sitter.json",
   "LICENSE",
 ]
