--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,11 +11,10 @@ permissions:
   attestations: write
 
 jobs:
-  # github:
-  #   uses: tree-sitter/workflows/.github/workflows/release.yml@main
-  #   with:
-  #     generate: true
-  #     attestations: true
+  github:
+    uses: tree-sitter/workflows/.github/workflows/release.yml@main
+    with:
+      attestations: true
   npm:
     uses: tree-sitter/workflows/.github/workflows/package-npm.yml@main
     secrets:
@@ -26,7 +25,5 @@ jobs:
       CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
   pypi:
     uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
-    with:
-      generate: true
     secrets:
       PYPI_API_TOKEN: ${{secrets.PYPI_API_TOKEN}}
