--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,19 +11,19 @@ permissions:
   attestations: write
 
 jobs:
-  github:
-    uses: tree-sitter/workflows/.github/workflows/release.yml@main
-    with:
-      attestations: true
-  npm:
-    uses: tree-sitter/workflows/.github/workflows/package-npm.yml@main
-    secrets:
-      NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+  # github:
+  #   uses: tree-sitter/workflows/.github/workflows/release.yml@main
+  #   with:
+  #     attestations: true
+  # npm:
+  #   uses: tree-sitter/workflows/.github/workflows/package-npm.yml@main
+  #   secrets:
+  #     NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
   crates:
     uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
     secrets:
       CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
-  pypi:
-    uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
-    secrets:
-      PYPI_API_TOKEN: ${{secrets.PYPI_API_TOKEN}}
+  # pypi:
+  #   uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
+  #   secrets:
+  #     PYPI_API_TOKEN: ${{secrets.PYPI_API_TOKEN}}
