--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,18 +14,16 @@ jobs:
   github:
     uses: tree-sitter/workflows/.github/workflows/release.yml@main
     with:
-      generate: true
       attestations: true
   npm:
     uses: tree-sitter/workflows/.github/workflows/package-npm.yml@main
-    with:
-      generate: true
+    secrets:
+      NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
   crates:
     uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
-    with:
-      generate: true
+    secrets:
+      CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
   pypi:
     uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
-    with:
-      generate: true
-
+    secrets:
+      PYPI_API_TOKEN: ${{secrets.PYPI_API_TOKEN}}
