--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,85 +10,25 @@ permissions:
   id-token: write
   attestations: write
 
-# jobs:
-#   github:
-#     uses: tree-sitter/workflows/.github/workflows/release.yml@main
-#     with:
-#       attestations: true
-#   npm:
-#     uses: tree-sitter/workflows/.github/workflows/package-npm.yml@trusted-publishing
-#     with:
-#       package-name: "@potassco/tree-sitter-clingo-test"
-#       environment-name: npm
-#   crates:
-#     uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
-#     secrets:
-#       CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
-#   pypi:
-#     uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
-#     secrets:
-#       PYPI_API_TOKEN: ${{secrets.PYPI_API_TOKEN}}
-
-defaults:
-  run:
-    shell: bash
-
 jobs:
-  build_node:
-    name: Build NodeJS binaries on ${{matrix.os}}
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os:
-          - ubuntu-24.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v6
-      - name: Set up NodeJS
-        uses: actions/setup-node@v6
-        with:
-          cache: npm
-          node-version: 22
-      - name: Install dependencies
-        run: npm i --omit peer --omit optional
-      - name: Build binary
-        run: npm x -- prebuildify -t 20.19.5
-      - name: Upload binaries
-        uses: actions/upload-artifact@v6
-        with:
-          path: prebuilds/**
-          name: prebuilds-${{matrix.os}}
-          retention-days: 2
-
-  package:
-    name: Publish NodeJS package
-    needs: build_node
-    runs-on: ubuntu-24.04
-    #environment:
-    #  name: npm
-    #  url: https://www.npmjs.com/package/@potassco/tree-sitter-clingo-test
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v6
-      - name: Set up NodeJS
-        uses: actions/setup-node@v6
-        with:
-          cache: npm
-          node-version: 22
-          registry-url: https://registry.npmjs.org/
-          scope: "@potassco"
-          environment: "npm"
-
-      - name: Download binaries
-        uses: actions/download-artifact@v7
-        with:
-          path: prebuilds
-          pattern: prebuilds-*
-          merge-multiple: true
-      - name: Check binaries
-        run: tree prebuilds
-      - name: Show npm config
-        run: npm config list
-      - name: Publish to npm
-        run: |
-          npm publish --verbose --loglevel=verbose
+  #   github:
+  #     uses: tree-sitter/workflows/.github/workflows/release.yml@main
+  #     with:
+  #       attestations: true
+  npm:
+    uses: tree-sitter/workflows/.github/workflows/package-npm.yml@trusted-publishing
+    permissions:
+      contents: write
+      id-token: write
+      attestations: write
+    with:
+      package-name: "@potassco/tree-sitter-clingo-test"
+      environment-name: npm
+  #   crates:
+  #     uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
+  #     secrets:
+  #       CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
+  #   pypi:
+  #     uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
+  #     secrets:
+  #       PYPI_API_TOKEN: ${{secrets.PYPI_API_TOKEN}}
